# NFT-Auction

backend/: Cargo.toml
backend/src/: main.rs  solana_client.rs  state.rs
backend/src/handlers/: mod.rs  requests_handler.rs
backend/src/models/: requests.rs
backend/src/routes/: mod.rs  requests_routes.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  types.ts  utils.ts
frontend/app/(main)/: layout.tsx
frontend/app/(main)/admin/: page.tsx
frontend/app/(main)/home/: page.tsx
frontend/app/(main)/marketplace/: page.tsx
frontend/app/(main)/my-listings/: page.tsx
frontend/app/(main)/nft/: page.tsx
frontend/app/(main)/portfolio/: page.tsx
frontend/app/(main)/properties/: page.tsx
frontend/app/(main)/shares/: page.tsx
frontend/app/api/file/: route.ts
frontend/app/api/json/: route.ts
frontend/app/components/ui/: BuySharesCalculator.tsx  Header.tsx  ImageCarousel.tsx  Input.tsx  PropertyDetails.tsx  PropertyForm.tsx  ShareHolderView.tsx  SharesDetails.tsx  Sidebar.tsx
frontend/app/components/ui/layout/: Error.tsx  Header.tsx  (+3 more)
frontend/app/hooks/: useMutations.ts  useProgram.ts  useProgramActions.ts
frontend/app/utils/: pinata.ts  token.ts
program/: Anchor.toml  package-lock.json  sbt-metadata.json
program/programs/identity-registry/: Cargo.toml
program/programs/identity-registry/src/: contexts.rs  errors.rs  lib.rs  states.rs
program/programs/program/: Cargo.toml
program/programs/program/src/: constants.rs  contexts.rs  errors.rs  events.rs  lib.rs  states.rs
program/tests/: program.ts
(+4 files in other folders)
