[package]
name = "identity-registry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_registry"

[features]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[lints.rust]
# unexpected_cfgs = { level = "warn", check-cfg = ['cfg(anchor_debug)'] }
unexpected_cfgs = "allow"
